Implementación de autenticación con JWT y correcciones generales
- Configuración de Spring Security para proteger endpoints con autenticación basada en JWT (Bearer Token).
- Creación del AuthController para manejo de inicio de sesión y generación de tokens JWT.
- Configuración de JwtAuthenticationFilter para validar tokens en cada solicitud.
- Creación de UserService para validar credenciales de usuario contra la base de datos.
- Corrección de errores en el modelo de datos, incluyendo relaciones entre usuarios, roles y respuestas.
- Ajustes en la base de datos: validación y cifrado de contraseñas utilizando BCryptPasswordEncoder.
- Solución de errores relacionados con 403 Forbidden durante el login.
- Pruebas y validaciones de endpoints protegidos en Postman.